--- a/bigbluebutton-html5/imports/ui/components/user-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/user-list/styles.scss
@@ -10,7 +10,7 @@
 :root {
   --unread-messages-bg: var(--color-danger);
   --user-list-text: var(--color-gray);
-  --user-list-bg: var(--color-off-white);
+  --user-list-bg: var(--color-white);
 
   --user-thumbnail-border: var(--color-gray-light);
   --user-thumbnail-text: var(--user-thumbnail-border);
