--- a/bigbluebutton-html5/imports/ui/components/actions-bar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/actions-bar/styles.scss
@@ -75,7 +75,7 @@
 
 .button {
   span:first-child {
-    box-shadow: 0 2px 5px 0 rgb(255, 255, 255);
+    box-shadow: 0 2px 5px 0 rgb(169,169,169);
   }
 }
 
