--- a/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/nav-bar/styles.scss
@@ -75,7 +75,7 @@
 
 .btn {
   margin: 0;
-
+  color: var(--color-black) !important;
   span {
     border: none;
     box-shadow: none;
@@ -85,7 +85,7 @@
   &:focus {
     span {
       background-color: transparent !important;
-      color: var(--color-black) !important;
+      color: var(--color-dark-gray) !important;
       opacity: .75;
     }
   }
