--- a/bigbluebutton-html5/imports/ui/components/dropdown/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/dropdown/styles.scss
@@ -3,7 +3,7 @@
 @import "/imports/ui/stylesheets/mixins/_indicators";
 
 :root {
-  --dropdown-bg: var(--color-white);
+  --dropdown-bg: var(--color-black);
   --dropdown-color: var(--color-text);
   --caret-shadow-color: var(--color-gray);
 
