--- a/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
@@ -59,6 +59,7 @@
   .buttonWrapper > .toolbarButton {
     outline-offset: var(--toolbar-item-outline-offset);
     border-bottom: var(--toolbar-button-border) solid var(--toolbar-button-border-color);
+    border-radius: 20px;
   }
 
   .buttonWrapper:first-child > .toolbarButton {
