--- a/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
@@ -199,10 +199,11 @@
   align-items: center;
   justify-content: center;
   font-size: var(--toolbar-button-font-size);
-  background-color: transparent !important;
+  background-color: var(--toolbar-list-bg);
+  opacity: 0.7;
   border: 0 !important;
   box-shadow: none;
-  border-radius: 0;
+  border-radius: 20px;
   padding: initial;
   outline-offset: var(--toolbar-item-outline-offset);
 
