--- a/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
@@ -133,7 +133,7 @@
   align-items: center !important;
   justify-content: center !important;
   position: relative;
-  border-radius: 0;
+  border-radius: 20px;
   box-shadow: none !important;
   z-index: 1;
   font-size: var(--toolbar-button-font-size);
