--- a/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
@@ -191,7 +191,7 @@
   align-items: center;
   justify-content: center;
   font-size: var(--toolbar-button-font-size);
-  background-color: transparent !important;
+  background-color: var(--toolbar-list-bg);
   border: 0 !important;
   box-shadow: none;
   border-radius: 20px;
