--- a/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
@@ -99,7 +99,7 @@
   border-color: transparent;
   border-style: solid;
   z-index: 2;
-  border-radius: 0;
+  border-radius: 20px;
   border-width: 0.35em;
   bottom: var(--toolbar-item-triangle-padding);
   left: var(--toolbar-item-triangle-padding);
