--- a/bigbluebutton-html5/client/stylesheets/bbb-icons.css
+++ b/bigbluebutton-html5/client/stylesheets/bbb-icons.css
@@ -4566,7 +4566,7 @@
    font-style: normal;
    font-weight: 400;
    font-display: block;
-   src: url("./webfonts/fa-regular-400.woff") format("woff");
+   src: url("/webfonts/fa-regular-400.woff") format("woff");
  } 
  .far {
    font-family: 'Font Awesome 5 Free';
@@ -4576,7 +4576,7 @@
    font-style: normal;
    font-weight: 900;
    font-display: block;
-   src: url("./webfonts/fa-solid-900.woff") format("woff");
+   src: url("/webfonts/fa-solid-900.woff") format("woff");
  }
  .fa,
  .fas {
