--- a/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
@@ -116,7 +116,8 @@
 }
 
 .toolbarButton {
-  padding: 5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   width: 100%;
   height: 100%;
   display: flex;
