--- a/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/whiteboard/whiteboard-toolbar/styles.scss
@@ -155,7 +155,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  height: var(--toolbar-button-height);
+  height: auto;
   position: absolute;
   background-color: transparent !important;
   right: var(--toolbar-button-height);
