--- a/bigbluebutton-html5/client/stylesheets/bbb-icons.css
+++ b/bigbluebutton-html5/client/stylesheets/bbb-icons.css
@@ -1,6 +1,10 @@
 @font-face {
   font-family: 'bbb-icons';
-  src: url('/fonts/BbbIcons/bbb-icons.woff?j1ntjp') format('woff');
+  src:  url('/fonts/bbb-icons.eot?73sr34');
+  src:  url('/fonts/bbb-icons.eot?73sr34#iefix') format('embedded-opentype'),
+    url('/fonts/bbb-icons.ttf?73sr34') format('truetype'),
+    url('/fonts/bbb-icons.woff?73sr34') format('woff'),
+    url('/fonts/bbb-icons.svg?73sr34#bbb-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -9,112 +13,48 @@
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'bbb-icons' !important;
   speak: none;
-  position: relative;
-  /*top: 1px;*/
-  display: inline-block;
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
   line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  width: 1em;
-  text-align: center;
-  vertical-align: middle;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-bbb-mute:before {
-  content: "\e932";
-}
-.icon-bbb-unmute:before {
-  content: "\e931";
-}
-.icon-bbb-file:before {
-  content: "\e92e";
-}
-.icon-bbb-upload:before {
-  content: "\e92f";
-}
-.icon-bbb-fullscreen:before {
-  content: "\e92a";
-}
-.icon-bbb-exit_fullscreen:before {
-  content: "\e935";
-}
-.icon-bbb-settings:before {
-  content: "\e92b";
-}
-.icon-bbb-fit_to_screen:before {
-  content: "\e929";
-}
-.icon-bbb-line_tool:before {
-  content: "\e91c";
-}
-.icon-bbb-circle_tool:before {
-  content: "\e91d";
-}
-.icon-bbb-triangle_tool:before {
-  content: "\e91e";
-}
-.icon-bbb-rectangle_tool:before {
-  content: "\e91f";
-}
-.icon-bbb-text_tool:before {
-  content: "\e920";
-}
-.icon-bbb-plus:before {
-  content: "\e921";
-}
-.icon-bbb-fit_to_width:before {
-  content: "\e922";
-}
-.icon-bbb-undo:before {
-  content: "\e924";
-}
-.icon-bbb-pen_tool:before {
-  content: "\e925";
-}
-.icon-bbb-lock:before {
-  content: "\e926";
-}
-.icon-bbb-polling:before {
-  content: "\e927";
-}
-.icon-bbb-desktop:before {
-  content: "\e928";
-}
 .icon-bbb-logout:before {
   content: "\e900";
-}
-.icon-bbb-video:before {
-  content: "\e930";
-}
-.icon-bbb-elipsis:before {
-  content: "\e902";
-}
-.icon-bbb-more:before {
-  content: "\e902";
-  display: inline-block;
-  transform: rotate(90deg);
-}
-.icon-bbb-promote:before {
-  content: "\e903";
 }
 .icon-bbb-application:before {
   content: "\e901";
 }
-.icon-bbb-video_off:before {
+.icon-bbb-more:before {
+  content: "\e902";
+}
+.icon-bbb-promote:before {
+  content: "\e903";
+}
+.icon-bbb-video-off:before {
   content: "\e904";
 }
 .icon-bbb-user:before {
   content: "\e905";
 }
-.icon-bbb-up_arrow:before {
+.icon-bbb-up-arrow:before {
   content: "\e906";
 }
-.icon-bbb-right_arrow:before {
+.icon-bbb-undecided:before {
+  content: "\e907";
+}
+.icon-bbb-time:before {
+  content: "\e908";
+}
+.icon-bbb-sad:before {
+  content: "\e909";
+}
+.icon-bbb-right-arrow:before {
   content: "\e90a";
 }
 .icon-bbb-presentation:before {
@@ -123,16 +63,25 @@
 .icon-bbb-listen:before {
   content: "\e90c";
 }
-.icon-bbb-left_arrow:before {
+.icon-bbb-left-arrow:before {
   content: "\e90d";
 }
-.icon-bbb-group_chat:before {
+.icon-bbb-happy:before {
+  content: "\e90e";
+}
+.icon-bbb-hand:before {
+  content: "\e90f";
+}
+.icon-bbb-group-chat:before {
   content: "\e910";
+}
+.icon-bbb-confused:before {
+  content: "\e911";
 }
 .icon-bbb-close:before {
   content: "\e912";
 }
-.icon-bbb-clear_status:before {
+.icon-bbb-clear-status:before {
   content: "\e913";
 }
 .icon-bbb-circle:before {
@@ -141,7 +90,7 @@
 .icon-bbb-substract:before {
   content: "\e915";
 }
-.icon-bbb-circle_close:before {
+.icon-bbb-circle-close:before {
   content: "\e916";
 }
 .icon-bbb-add:before {
@@ -153,70 +102,112 @@
 .icon-bbb-chat:before {
   content: "\e919";
 }
-.icon-bbb-audio_on:before {
+.icon-bbb-audio-on:before {
   content: "\e91a";
 }
-.icon-bbb-audio_off:before {
+.icon-bbb-audio-off:before {
   content: "\e91b";
 }
-
-/* Aliases for emoji status */
-.icon-bbb-time:before {
-  content: "\e908";
+.icon-bbb-line-tool:before {
+  content: "\e91c";
 }
-.icon-bbb-hand:before {
-  content: "\e90f";
+.icon-bbb-circle-tool:before {
+  content: "\e91d";
 }
-.icon-bbb-undecided:before {
-  content: "\e907";
+.icon-bbb-triangle-tool:before {
+  content: "\e91e";
 }
-.icon-bbb-happy:before {
-  content: "\e90e";
+.icon-bbb-rectangle-tool:before {
+  content: "\e91f";
 }
-.icon-bbb-sad:before {
-  content: "\e909";
+.icon-bbb-text-tool:before {
+  content: "\e920";
 }
-.icon-bbb-confused:before {
-  content: "\e911";
+.icon-bbb-plus:before {
+  content: "\e921";
+}
+.icon-bbb-fit-to-width:before {
+  content: "\e922";
 }
 .icon-bbb-applause:before {
   content: "\e923";
 }
-.icon-bbb-thumbs_up:before {
-  content: "\e92d";
+.icon-bbb-undo:before {
+  content: "\e924";
 }
-.icon-bbb-thumbs_down:before {
+.icon-bbb-pen-tool:before {
+  content: "\e925";
+}
+.icon-bbb-lock:before {
+  content: "\e926";
+}
+.icon-bbb-polling:before {
+  content: "\e927";
+}
+.icon-bbb-desktop:before {
+  content: "\e928";
+}
+.icon-bbb-fit-to-screen:before {
+  content: "\e929";
+}
+.icon-bbb-fullscreen:before {
+  content: "\e92a";
+}
+.icon-bbb-settings:before {
+  content: "\e92b";
+}
+.icon-bbb-thumbs-down:before {
   content: "\e92c";
 }
-.icon-bbb-send:before {
-  content: "\e934";
+.icon-bbb-thumbs-up:before {
+  content: "\e92d";
+}
+.icon-bbb-file:before {
+  content: "\e92e";
+}
+.icon-bbb-upload:before {
+  content: "\e92f";
+}
+.icon-bbb-video:before {
+  content: "\e930";
+}
+.icon-bbb-unmute:before {
+  content: "\e931";
+}
+.icon-bbb-mute:before {
+  content: "\e932";
 }
 .icon-bbb-about:before {
   content: "\e933";
 }
-
+.icon-bbb-send:before {
+  content: "\e934";
+}
+.icon-bbb-exit-fullscreen:before {
+  content: "\e935";
+}
 .icon-bbb-delete:before {
   content: "\e936";
 }
-.icon-bbb-unmute_filled:before {
+.icon-bbb-unmute-filled:before {
   content: "\e937";
 }
-.icon-bbb-mute_filled:before {
+.icon-bbb-mute-filled:before {
   content: "\e938";
 }
-.icon-bbb-listen_filled:before {
+.icon-bbb-listen_filled	:before {
   content: "\e939";
 }
-.icon-bbb-template_upload:before {
+.icon-bbb-template-upload:before {
   content: "\e93a";
 }
-.icon-bbb-template_download:before {
+.icon-bbb-template-download:before {
   content: "\e93b";
 }
-.icon-bbb-download:before {
+.icon-bbb-save-notes:before {
   content: "\e93c";
 }
-.icon-bbb-multi_whiteboard:before {
+.icon-bbb-multi-whiteboard:before {
   content: "\e93d";
 }
 .icon-bbb-whiteboard:before {
@@ -237,19 +228,22 @@
 .icon-bbb-redo:before {
   content: "\e943";
 }
-.icon-bbb-thumbs_down_filled:before {
+.icon-bbb-thumbs-down-filled:before {
   content: "\e944";
 }
-.icon-bbb-thumbs_up_filled:before {
+.icon-bbb-thumbs-up-filled:before {
   content: "\e945";
 }
 .icon-bbb-checkmark:before {
   content: "\e946";
 }
-.icon-bbb-speak_louder:before {
+.icon-bbb-speak-louder:before {
   content: "\e947";
 }
 .icon-bbb-help:before {
+  content: "\e940";
+}
+.icon-bbb-unlock:before {
   content: "\e948";
 }
 .icon-bbb-refresh:before {
@@ -264,8 +258,20 @@
 .icon-bbb-warning:before {
   content: "\e94c";
 }
+.icon-bbb-transfer_audio:before {
+  content: "\e94d";
+}
+.icon-bbb-room:before {
+  content: "\e94e";
+}
+.icon-bbb-new_file:before {
+  content: "\e94f";
+}
 .icon-bbb-pointer:before {
   content: "\e950";
+}
+.icon-bbb-star:before {
+  content: "\e951";
 }
 .icon-bbb-star_filled:before {
   content: "\e952";
@@ -276,7 +282,7 @@
 .icon-bbb-minus:before {
   content: "\e954";
 }
-.icon-bbb-download-off:before {
+.icon-bbb-download_off:before {
   content: "\e955";
 }
 .icon-bbb-popout_window:before {
