--- a/bigbluebutton-html5/client/stylesheets/bbb-icons.css
+++ b/bigbluebutton-html5/client/stylesheets/bbb-icons.css
@@ -1,287 +1,407 @@
 @font-face {
-  font-family: 'bbb-icons';
-  src: url('/fonts/BbbIcons/bbb-icons.woff?j1ntjp') format('woff');
+  font-family: 'icomoon';
+  src:  url('/fonts/icomoon.eot?b01j17');
+  src:  url('/fonts/icomoon.eot?b01j17#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.ttf?b01j17') format('truetype'),
+    url('/fonts/icomoon.woff?b01j17') format('woff'),
+    url('/fonts/icomoon.svg?b01j17#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
-[class^="icon-bbb-"], [class*=" icon-bbb-"] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'bbb-icons' !important;
-  speak: none;
-  position: relative;
-  /*top: 1px;*/
-  display: inline-block;
+  font-family: 'icomoon' !important;
+  speak: never;
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
   line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  width: 1em;
-  text-align: center;
-  vertical-align: middle;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-bbb-mute:before {
-  content: "\e932";
-}
-.icon-bbb-unmute:before {
-  content: "\e931";
-}
-.icon-bbb-file:before {
-  content: "\e92e";
-}
-.icon-bbb-upload:before {
-  content: "\e92f";
-}
-.icon-bbb-fullscreen:before {
-  content: "\e92a";
-}
-.icon-bbb-exit_fullscreen:before {
-  content: "\e935";
-}
-.icon-bbb-settings:before {
-  content: "\e92b";
-}
-.icon-bbb-fit_to_screen:before {
-  content: "\e929";
-}
-.icon-bbb-line_tool:before {
-  content: "\e91c";
-}
-.icon-bbb-circle_tool:before {
-  content: "\e91d";
-}
-.icon-bbb-triangle_tool:before {
-  content: "\e91e";
-}
-.icon-bbb-rectangle_tool:before {
-  content: "\e91f";
-}
-.icon-bbb-text_tool:before {
-  content: "\e920";
-}
-.icon-bbb-plus:before {
-  content: "\e921";
-}
-.icon-bbb-fit_to_width:before {
-  content: "\e922";
-}
-.icon-bbb-undo:before {
-  content: "\e924";
-}
-.icon-bbb-pen_tool:before {
-  content: "\e925";
-}
-.icon-bbb-lock:before {
-  content: "\e926";
-}
-.icon-bbb-polling:before {
-  content: "\e927";
-}
-.icon-bbb-desktop:before {
-  content: "\e928";
-}
-.icon-bbb-logout:before {
-  content: "\e900";
-}
-.icon-bbb-video:before {
-  content: "\e930";
-}
-.icon-bbb-elipsis:before {
-  content: "\e902";
-}
-.icon-bbb-more:before {
-  content: "\e902";
-  display: inline-block;
-  transform: rotate(90deg);
-}
-.icon-bbb-promote:before {
-  content: "\e903";
-}
-.icon-bbb-application:before {
-  content: "\e901";
-}
-.icon-bbb-video_off:before {
-  content: "\e904";
-}
-.icon-bbb-user:before {
-  content: "\e905";
-}
-.icon-bbb-up_arrow:before {
-  content: "\e906";
-}
-.icon-bbb-right_arrow:before {
-  content: "\e90a";
-}
-.icon-bbb-presentation:before {
-  content: "\e90b";
-}
-.icon-bbb-listen:before {
-  content: "\e90c";
-}
-.icon-bbb-left_arrow:before {
-  content: "\e90d";
-}
-.icon-bbb-group_chat:before {
+.icon-group-chat:before {
   content: "\e910";
+  color: #8a9aa7;
 }
-.icon-bbb-close:before {
-  content: "\e912";
-}
-.icon-bbb-clear_status:before {
-  content: "\e913";
-}
-.icon-bbb-circle:before {
-  content: "\e914";
-}
-.icon-bbb-substract:before {
-  content: "\e915";
-}
-.icon-bbb-circle_close:before {
-  content: "\e916";
-}
-.icon-bbb-add:before {
-  content: "\e917";
-}
-.icon-bbb-check:before {
-  content: "\e918";
-}
-.icon-bbb-chat:before {
-  content: "\e919";
-}
-.icon-bbb-audio_on:before {
-  content: "\e91a";
-}
-.icon-bbb-audio_off:before {
-  content: "\e91b";
-}
-
-/* Aliases for emoji status */
-.icon-bbb-time:before {
-  content: "\e908";
-}
-.icon-bbb-hand:before {
-  content: "\e90f";
-}
-.icon-bbb-undecided:before {
-  content: "\e907";
-}
-.icon-bbb-happy:before {
-  content: "\e90e";
-}
-.icon-bbb-sad:before {
-  content: "\e909";
-}
-.icon-bbb-confused:before {
-  content: "\e911";
-}
-.icon-bbb-applause:before {
-  content: "\e923";
-}
-.icon-bbb-thumbs_up:before {
-  content: "\e92d";
-}
-.icon-bbb-thumbs_down:before {
-  content: "\e92c";
-}
-.icon-bbb-send:before {
-  content: "\e934";
-}
-.icon-bbb-about:before {
+.icon-about:before {
   content: "\e933";
+  color: #8a9aa7;
 }
-
-.icon-bbb-delete:before {
-  content: "\e936";
+.icon-alert:before {
+  content: "\e958";
+  color: #8a9aa7;
 }
-.icon-bbb-unmute_filled:before {
-  content: "\e937";
+.icon-applause:before {
+  content: "\e923";
+  color: #8a9aa7;
 }
-.icon-bbb-mute_filled:before {
-  content: "\e938";
+.icon-application:before {
+  content: "\e94e";
+  color: #8a9aa7;
 }
-.icon-bbb-listen_filled:before {
-  content: "\e939";
+.icon-audio_off_1:before {
+  content: "\e9040";
+  color: #8a9aa7;
 }
-.icon-bbb-template_upload:before {
-  content: "\e93a";
+.icon-audio_off:before {
+  content: "\e91b";
+  color: #8a9aa7;
 }
-.icon-bbb-template_download:before {
-  content: "\e93b";
+.icon-audio_on:before {
+  content: "\e91a";
+  color: #8a9aa7;
 }
-.icon-bbb-download:before {
-  content: "\e93c";
+.icon-chat:before {
+  content: "\e919";
+  color: #8a9aa7;
 }
-.icon-bbb-multi_whiteboard:before {
-  content: "\e93d";
+.icon-check:before {
+  content: "\e918";
+  color: #8a9aa7;
 }
-.icon-bbb-whiteboard:before {
-  content: "\e93e";
-}
-.icon-bbb-rooms:before {
-  content: "\e93f";
-}
-.icon-bbb-unlock:before {
-  content: "\e940";
-}
-.icon-bbb-record:before {
-  content: "\e941";
-}
-.icon-bbb-network:before {
-  content: "\e942";
-}
-.icon-bbb-redo:before {
-  content: "\e943";
-}
-.icon-bbb-thumbs_down_filled:before {
-  content: "\e944";
-}
-.icon-bbb-thumbs_up_filled:before {
-  content: "\e945";
-}
-.icon-bbb-checkmark:before {
+.icon-checkmark:before {
   content: "\e946";
+  color: #8a9aa7;
 }
-.icon-bbb-speak_louder:before {
-  content: "\e947";
+.icon-circle:before {
+  content: "\e914";
+  color: #8a9aa7;
 }
-.icon-bbb-help:before {
-  content: "\e948";
+.icon-add:before {
+  content: "\e917";
+  color: #8a9aa7;
 }
-.icon-bbb-refresh:before {
-  content: "\e949";
+.icon-circle_close:before {
+  content: "\e916";
+  color: #8a9aa7;
 }
-.icon-bbb-copy:before {
-  content: "\e94a";
+.icon-substract:before {
+  content: "\e915";
+  color: #8a9aa7;
 }
-.icon-bbb-shortcuts:before {
-  content: "\e94b";
+.icon-circle_tool:before {
+  content: "\e91d";
+  color: #8a9aa7;
 }
-.icon-bbb-warning:before {
-  content: "\e94c";
+.icon-clear-status:before {
+  content: "\e90f0";
+  color: #8a9aa7;
 }
-.icon-bbb-pointer:before {
-  content: "\e950";
+.icon-close:before {
+  content: "\e912";
+  color: #8a9aa7;
 }
-.icon-bbb-star_filled:before {
-  content: "\e952";
-}
-.icon-bbb-desktop_off:before {
-  content: "\e953";
-}
-.icon-bbb-minus:before {
-  content: "\e954";
-}
-.icon-bbb-download-off:before {
-  content: "\e955";
-}
-.icon-bbb-popout_window:before {
-  content: "\e956";
-}
-.icon-bbb-closed_caption:before {
+.icon-closed-caption:before {
   content: "\e957";
+  color: #8a9aa7;
+}
+.icon-confused:before {
+  content: "\e911";
+  color: #8a9aa7;
+}
+.icon-copy:before {
+  content: "\e94a";
+  color: #8a9aa7;
+}
+.icon-desktop:before {
+  content: "\e928";
+  color: #8a9aa7;
+}
+.icon-desktop_off:before {
+  content: "\e953";
+  color: #8a9aa7;
+}
+.icon-download:before {
+  content: "\e93c";
+  color: #8a9aa7;
+}
+.icon-download_off:before {
+  content: "\e955";
+  color: #8a9aa7;
+}
+.icon-template_upload:before {
+  content: "\e93a";
+  color: #8a9aa7;
+}
+.icon-exit_fullscreen:before {
+  content: "\e935";
+  color: #8a9aa7;
+}
+.icon-file:before {
+  content: "\e91a0";
+  color: #8a9aa7;
+}
+.icon-star_filled:before {
+  content: "\e952";
+  color: #8a9aa7;
+}
+.icon-fit_to_screen:before {
+  content: "\e929";
+  color: #8a9aa7;
+}
+.icon-fit_to_width:before {
+  content: "\e922";
+  color: #8a9aa7;
+}
+.icon-fullscreen:before {
+  content: "\e92a";
+  color: #8a9aa7;
+}
+.icon-group_chat:before {
+  content: "\e91f0";
+  color: #8a9aa7;
+}
+.icon-hand:before {
+  content: "\e90f";
+  color: #8a9aa7;
+}
+.icon-happy:before {
+  content: "\e90e";
+  color: #8a9aa7;
+}
+.icon-help:before {
+  content: "\e9220";
+  color: #8a9aa7;
+}
+.icon-left_arrow:before {
+  content: "\e9230";
+  color: #8a9aa7;
+}
+.icon-line-tool:before {
+  content: "\e9240";
+  color: #8a9aa7;
+}
+.icon-listen:before {
+  content: "\e9250";
+  color: #8a9aa7;
+}
+.icon-listen_filled:before {
+  content: "\e9260";
+  color: #8a9aa7;
+}
+.icon-lock:before {
+  content: "\e9270";
+  color: #8a9aa7;
+}
+.icon-logout:before {
+  content: "\e9280";
+  color: #8a9aa7;
+}
+.icon-minus:before {
+  content: "\e9290";
+  color: #8a9aa7;
+}
+.icon-more:before {
+  content: "\e92a0";
+  color: #8a9aa7;
+}
+.icon-multi_whiteboard_icon:before {
+  content: "\e92b0";
+  color: #8a9aa7;
+}
+.icon-multi_whiteboard:before {
+  content: "\e93d";
+  color: #8a9aa7;
+}
+.icon-unmute:before {
+  content: "\e931";
+  color: #8a9aa7;
+}
+.icon-mute_filled:before {
+  content: "\e938";
+  color: #8a9aa7;
+}
+.icon-network:before {
+  content: "\e942";
+  color: #8a9aa7;
+}
+.icon-new_file:before {
+  content: "\e94f";
+  color: #8a9aa7;
+}
+.icon-pen_tool:before {
+  content: "\e925";
+  color: #8a9aa7;
+}
+.icon-plus:before {
+  content: "\e921";
+  color: #8a9aa7;
+}
+.icon-pointer:before {
+  content: "\e950";
+  color: #8a9aa7;
+}
+.icon-polling:before {
+  content: "\e927";
+  color: #8a9aa7;
+}
+.icon-popout_window:before {
+  content: "\e956";
+  color: #8a9aa7;
+}
+.icon-presentation:before {
+  content: "\e90b";
+  color: #8a9aa7;
+}
+.icon-promote:before {
+  content: "\e903";
+  color: #8a9aa7;
+}
+.icon-record:before {
+  content: "\e941";
+  color: #8a9aa7;
+}
+.icon-redo:before {
+  content: "\e943";
+  color: #8a9aa7;
+}
+.icon-refresh:before {
+  content: "\e949";
+  color: #8a9aa7;
+}
+.icon-right_arrow:before {
+  content: "\e90a";
+  color: #8a9aa7;
+}
+.icon-room:before {
+  content: "\e93c0";
+  color: #8a9aa7;
+}
+.icon-rooms:before {
+  content: "\e93f";
+  color: #8a9aa7;
+}
+.icon-sad:before {
+  content: "\e909";
+  color: #8a9aa7;
+}
+.icon-send:before {
+  content: "\e934";
+  color: #8a9aa7;
+}
+.icon-settings:before {
+  content: "\e92b";
+  color: #8a9aa7;
+}
+.icon-shortcuts:before {
+  content: "\e94b";
+  color: #8a9aa7;
+}
+.icon-speak_louder:before {
+  content: "\e947";
+  color: #8a9aa7;
+}
+.icon-rectangle_tool:before {
+  content: "\e91f";
+  color: #8a9aa7;
+}
+.icon-star:before {
+  content: "\e951";
+  color: #8a9aa7;
+}
+.icon-text_tool:before {
+  content: "\e920";
+  color: #8a9aa7;
+}
+.icon-thumbs_down:before {
+  content: "\e92c";
+  color: #8a9aa7;
+}
+.icon-thumbs_down_filled:before {
+  content: "\e944";
+  color: #8a9aa7;
+}
+.icon-thumbs_up:before {
+  content: "\e92d";
+  color: #8a9aa7;
+}
+.icon-thumbs_up_filled:before {
+  content: "\e945";
+  color: #8a9aa7;
+}
+.icon-time:before {
+  content: "\e908";
+  color: #8a9aa7;
+}
+.icon-transfer_audio:before {
+  content: "\e94d";
+  color: #8a9aa7;
+}
+.icon-trash:before {
+  content: "\e936";
+  color: #8a9aa7;
+}
+.icon-triangle_tool:before {
+  content: "\e94d0";
+  color: #8a9aa7;
+}
+.icon-undecided:before {
+  content: "\e907";
+  color: #8a9aa7;
+}
+.icon-undo:before {
+  content: "\e924";
+  color: #8a9aa7;
+}
+.icon-unlock:before {
+  content: "\e940";
+  color: #8a9aa7;
+}
+.icon-mute:before {
+  content: "\e932";
+  color: #8a9aa7;
+}
+.icon-unmute_filled:before {
+  content: "\e937";
+  color: #8a9aa7;
+}
+.icon-up_arrow:before {
+  content: "\e906";
+  color: #8a9aa7;
+}
+.icon-upload:before {
+  content: "\e92f";
+  color: #8a9aa7;
+}
+.icon-template_download:before {
+  content: "\e93b";
+  color: #8a9aa7;
+}
+.icon-user:before {
+  content: "\e905";
+  color: #8a9aa7;
+}
+.icon-video:before {
+  content: "\e930";
+  color: #8a9aa7;
+}
+.icon-video_off:before {
+  content: "\e904";
+  color: #8a9aa7;
+}
+.icon-warning:before {
+  content: "\e94c";
+  color: #8a9aa7;
+}
+.icon-whiteboard_icon:before {
+  content: "\e95a0";
+  color: #8a9aa7;
+}
+.icon-whiteboard:before {
+  content: "\e93e";
+  color: #8a9aa7;
+}
+.icon-audio_icon_blue:before {
+  content: "\e95c";
+  color: #25385d;
+}
+.icon-headphones_bluecolor:before {
+  content: "\e95d";
+  color: #25385d;
 }
