--- a/bigbluebutton-html5/client/stylesheets/bbb-icons.css
+++ b/bigbluebutton-html5/client/stylesheets/bbb-icons.css
@@ -333,7 +333,7 @@
   content: "\e94d";
   color: #8a9aa7;
 }
-.icon-trash:before {
+.icon-delete:before {
   content: "\e936";
   color: #8a9aa7;
 }
