--- a/bigbluebutton-html5/client/stylesheets/bbb-icons.css
+++ b/bigbluebutton-html5/client/stylesheets/bbb-icons.css
@@ -173,7 +173,7 @@
   content: "\e9230";
   color: #8a9aa7;
 }
-.icon-line-tool:before {
+.icon-line_tool:before {
   content: "\e9240";
   color: #8a9aa7;
 }
