--- a/bigbluebutton-html5/imports/ui/components/loading-screen/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/loading-screen/styles.scss
@@ -1,16 +1,7 @@
 @import "/imports/ui/stylesheets/variables/_all";
+@import "/imports/ui/stylesheets/animate.css";
 
-/* Variables
- * ==========
- */
-
-:root {
-  --loader-bg: var(--color-gray-dark);
-  --loader-bullet: var(--color-white);
-  --loader-message-color: var(--color-white);
-}
-
-.background {
+body{
   position: fixed;
   display: flex;
   flex-flow: column;
@@ -20,86 +11,95 @@
   background-color: #ECF3FC;
 }
 
-.message {
-  font-size: var(--font-size-large);
-  color: var(--color-white);
-  text-align: center;
-}
-
-.spinner {
-  width: 100%;
-  text-align: center;
-  height: 22px;
-  margin-bottom: var(--md-padding-x);
-}
-
-.spinner > div {
-  width: 18px;
-  height: 18px;
-  margin: 0 5px;
-  background-color: var(--loader-bullet);
-  border-radius: 100%;
-  display: inline-block;
-
-  :global(.animationsEnabled) & {
-    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  }
-}
-
-.spinner .bounce1 {
-  :global(.animationsEnabled) & {
-    animation-delay: -0.32s;
-  }
-}
-
-.spinner .bounce2 {
-  :global(.animationsEnabled) & {
-    animation-delay: -0.16s;
-  }
-}
-
-@keyframes sk-bouncedelay {
-  0%,
-  80%,
-  100% {
-    transform: scale(0);
-  }
-  40% {
-    transform: scale(1.0);
-  }
-}
-
-.lds-ripple {
-  width: 100%;
-  text-align: center;
-  margin-bottom: var(--md-padding-x);
-  display: inline-block;
-  position: relative;
-  height: 80px;
-}
-.lds-ripple div {
+.arrow-container{
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
   position: absolute;
-  border: 4px solid #0F70D7;
-  //opacity: 1;
+  justify-content: center;
+
+  left: 0;
+  right: 0;
+}
+
+.arrow-1{
+  width: 300px;
+  height: 300px;
+  background: #0F70D7;
+  opacity: 0.5;
   border-radius: 50%;
-  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  position: absolute;
 }
-.lds-ripple div:nth-child(2) {
-  animation-delay: -0.5s;
+
+.arrow-2{
+  width: 180px;
+  height: 180px;
+  background: #0F70D7;
+  border-radius: 50%;
+  position: absolute;
+  top: 60px;
+  left: 60px;
+  z-index: 1;
+  display: table;
 }
-@keyframes lds-ripple {
+
+.arrow-2:before{
+  width: 156px;
+  height: 156px;
+
+  position: absolute;
+  top: 6px;
+  left: 6px;
+}
+
+.arrow-2 i{
+  font-size: 120px;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  color: #0c53a0;
+}
+
+/* Custom Animate.css */
+
+.animated.hinge {
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+}
+
+@-webkit-keyframes zoomIn {
   0% {
-    top: 36px;
-    left: 36px;
-    width: 0;
-    height: 0;
-    //opacity: 1;
+    opacity: 0;
+    -webkit-transform: scale3d(.4, .4, .4);
+            transform: scale3d(.4, .4, .4);
   }
+
+  50% {
+    opacity: 0.5;
+  }
+  
   100% {
-    top: 0px;
-    left: 0px;
-    width: 72px;
-    height: 72px;
-    //opacity: 0;
+    opacity: 0;
   }
+}
+
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(.4, .4, .4);
+            transform: scale3d(.4, .4, .4);
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+  
+  100% {
+    opacity: 0;
+  }
+}
+
+.zoomIn {
+  -webkit-animation-name: zoomIn;
+          animation-name: zoomIn;
 }
